small alignment fix for mobile

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -11,11 +11,17 @@ body {
   font-weight: 400;
   color: #1e1e1e;
   background-color: #fff;
+  margin: 0px;
+  padding: 0px;
+  overflow-x:hidden;
 }
 
 html {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x:hidden;
 }
 
 h1,
